index.css
@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');

:root {
    --very-dark-grayish-blue: hsl(217, 19%, 35%);
    --desaturated-dark-blue: hsl(214, 17%, 51%);
    --grayish-blue: hsl(212, 23%, 69%);
    --light-grayish-blue: hsl(210, 46%, 95%);
}

*, *::before, *::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Manrope', 'sans-serif';
    font-size: 0.8125rem;
    color: var(--very-dark-grayish-blue);
    background-color: var(--light-grayish-blue);
    padding: 0.5rem;
    min-height: 100vh;
    display: flex;
    place-content: center;
}

.main-content {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 1rem;
}

.article {
    display: flex;
    flex-direction: column;
    column-gap: 1rem;
    background-color: white;
    border-radius: 0.625rem;
    max-width: 20rem;
    overflow: hidden;
}

.article__image {
    max-width: 100%;
    max-height: 12.5rem;
    object-fit: cover;
    object-position: center;
    border-radius: 0.625rem 0.625rem 0 0;
}

.article__content {
    padding: 2rem 2rem 1.25rem 2rem;
    display: flex;
    flex-direction: column;
    row-gap: 1rem;
}

.article__title {
    font-size: 1rem;
}

.article__description {
    font-weight: 500;
    color: var(--desaturated-dark-blue);
    line-height: 2.5ch;
}

.article__author-content {
    display: flex;
    column-gap: 0.75rem;
    align-items: center;
}

.article__author-avatar {
    border-radius: 50%;
    max-width: 2.5rem;
}

.article__author-info {
    display: flex;
    flex-direction: column;
    row-gap: 0.25rem;
}

.article__author-name {
    font-weight: 700;
}

.article__author-date {
    color: var(--grayish-blue);
    font-weight: 500;
}

.article__share {
    margin-inline-start: auto;
    border-radius: 50%;
    border: none;
    background-color: var(--light-grayish-blue);
    width: 2.25rem;
    height: 2.25rem;
}

.article__share:hover {
    background-color: var(--desaturated-dark-blue);
    cursor: pointer;
}

.article__share:hover .article__share-icon {
    filter: brightness(0) invert(1); /* Invert the color to white */
}

.article__share-content {
    background-color: var(--very-dark-grayish-blue);
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 1rem 2rem;
    border-radius: 0 0 0.625rem 0.625rem;
}

.article__share-text {
    color: var(--grayish-blue);
    font-variant: initial;
    font-size: 0.8125rem;
    letter-spacing: 1ch;
    font-weight: 300;
    padding-inline-end: 1rem;
}

.article__button-wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    column-gap: 1rem;
}

.article__share--inverse {
    margin-inline-start: auto;
    border-radius: 50%;
    border: none;
    width: 2.25rem;
    height: 2.25rem;
    background-color: var(--desaturated-dark-blue);
}

.article__share-icon--inverse {
    filter: brightness(0) invert(1);
}

.hidden {
    display: none;
}

@media (min-width: 40rem) {
    .article {
        display: grid;
        grid-template-columns: 40% 60%;
        justify-content: center;
        align-items: center;
        max-width: 44rem;
        column-gap: 0;
    }

    .article__image {
        display: block;
        object-fit: cover;
        min-width: auto;
        min-height: 100%;
        border-radius: 0.625rem 0 0 0.625rem;
    }

    .article__title {
        font-size: 1.25rem;
    }
}

